--- a/requirements.txt
+++ b/requirements.txt
@@ -32,5 +32,9 @@ streamlit
 # Install Clip from OpenAI ## MIT Licence
 git+https://github.com/openai/CLIP.git
 
+# Install clipseg from Timo ## MIT Licence
+git+https://github.com/timojl/clipseg.git#egg=clipseg
+
+
 
 
